// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ClientApplication no webhooks 1`] = `
<Panel>
  <PanelBody>
    <Sections
      withBorder={true}
    >
      <h3
        className="text-active"
      >
        <FormattedMessage
          id="fragments.client_application.production_title"
          values={Object {}}
        />
      </h3>
      <table
        className="mgi-table"
      >
        <colgroup>
          <col />
          <col />
          <col />
        </colgroup>
        <tbody>
          <tr>
            <th>
              <FormattedMessage
                id="fragments.client_application.client_id"
                values={Object {}}
              />
            </th>
            <td
              className="text-secondary"
            >
              5c5c929014cb881f5730271e
            </td>
            <CopyToClipboardCell
              text="5c5c929014cb881f5730271e"
            />
          </tr>
          <tr>
            <th>
              <FormattedMessage
                id="fragments.client_application.client_secret"
                values={Object {}}
              />
            </th>
            <td
              className="text-secondary"
            >
              80ZR35QMCRUFD9XC9AQ377WEMBKCY4X0
            </td>
            <CopyToClipboardCell
              text="80ZR35QMCRUFD9XC9AQ377WEMBKCY4X0"
            />
          </tr>
          <tr>
            <th>
              <FormattedMessage
                id="fragments.client_application.permalink"
                values={Object {}}
              />
            </th>
            <td
              className="text-secondary"
            >
              https://signup.getmati.com?merchantToken=5c5c929014cb881f5730271e&metadata={}
            </td>
            <CopyToClipboardCell
              text="https://signup.getmati.com?merchantToken=5c5c929014cb881f5730271e&metadata={}"
            />
          </tr>
          <tr>
            <th>
              <FormattedMessage
                id="fragments.client_application.webhook"
                values={Object {}}
              />
            </th>
            <td>
              <Button
                buttonStyle="primary"
                onClick={[Function]}
              >
                <FormattedMessage
                  id="fragments.client_application.add_webhook"
                  values={Object {}}
                />
              </Button>
            </td>
          </tr>
        </tbody>
      </table>
    </Sections>
  </PanelBody>
</Panel>
`;

exports[`ClientApplication one webhook 1`] = `
<Panel>
  <PanelBody>
    <Sections
      withBorder={true}
    >
      <h3
        className="text-active"
      >
        <FormattedMessage
          id="fragments.client_application.production_title"
          values={Object {}}
        />
      </h3>
      <table
        className="mgi-table"
      >
        <colgroup>
          <col />
          <col />
          <col />
        </colgroup>
        <tbody>
          <tr>
            <th>
              <FormattedMessage
                id="fragments.client_application.client_id"
                values={Object {}}
              />
            </th>
            <td
              className="text-secondary"
            >
              5c5c929014cb881f5730271e
            </td>
            <CopyToClipboardCell
              text="5c5c929014cb881f5730271e"
            />
          </tr>
          <tr>
            <th>
              <FormattedMessage
                id="fragments.client_application.client_secret"
                values={Object {}}
              />
            </th>
            <td
              className="text-secondary"
            >
              80ZR35QMCRUFD9XC9AQ377WEMBKCY4X0
            </td>
            <CopyToClipboardCell
              text="80ZR35QMCRUFD9XC9AQ377WEMBKCY4X0"
            />
          </tr>
          <tr>
            <th>
              <FormattedMessage
                id="fragments.client_application.permalink"
                values={Object {}}
              />
            </th>
            <td
              className="text-secondary"
            >
              https://signup.getmati.com?merchantToken=5c5c929014cb881f5730271e&metadata={}
            </td>
            <CopyToClipboardCell
              text="https://signup.getmati.com?merchantToken=5c5c929014cb881f5730271e&metadata={}"
            />
          </tr>
          <tr
            key="1"
          >
            <th
              rowSpan={1}
            >
              <FormattedMessage
                id="fragments.client_application.webhook"
                values={Object {}}
              />
            </th>
            <td
              className="mgi-items"
            >
              <code
                className="mgi-items--grow"
              >
                https://mati-callbacks-demo.firebaseio.com/webhooks.json
              </code>
              <Button
                buttonStyle="invisible"
                onClick={[Function]}
              >
                <trashbin.svg
                  className="svg-error"
                />
              </Button>
            </td>
            <CopyToClipboardCell
              text="https://mati-callbacks-demo.firebaseio.com/webhooks.json"
            />
          </tr>
        </tbody>
      </table>
    </Sections>
  </PanelBody>
</Panel>
`;

exports[`ClientApplication two webhooks 1`] = `
<Panel>
  <PanelBody>
    <Sections
      withBorder={true}
    >
      <h3
        className="text-active"
      >
        <FormattedMessage
          id="fragments.client_application.production_title"
          values={Object {}}
        />
      </h3>
      <table
        className="mgi-table"
      >
        <colgroup>
          <col />
          <col />
          <col />
        </colgroup>
        <tbody>
          <tr>
            <th>
              <FormattedMessage
                id="fragments.client_application.client_id"
                values={Object {}}
              />
            </th>
            <td
              className="text-secondary"
            >
              5c5c929014cb881f5730271e
            </td>
            <CopyToClipboardCell
              text="5c5c929014cb881f5730271e"
            />
          </tr>
          <tr>
            <th>
              <FormattedMessage
                id="fragments.client_application.client_secret"
                values={Object {}}
              />
            </th>
            <td
              className="text-secondary"
            >
              80ZR35QMCRUFD9XC9AQ377WEMBKCY4X0
            </td>
            <CopyToClipboardCell
              text="80ZR35QMCRUFD9XC9AQ377WEMBKCY4X0"
            />
          </tr>
          <tr>
            <th>
              <FormattedMessage
                id="fragments.client_application.permalink"
                values={Object {}}
              />
            </th>
            <td
              className="text-secondary"
            >
              https://signup.getmati.com?merchantToken=5c5c929014cb881f5730271e&metadata={}
            </td>
            <CopyToClipboardCell
              text="https://signup.getmati.com?merchantToken=5c5c929014cb881f5730271e&metadata={}"
            />
          </tr>
          <tr
            key="1"
          >
            <th
              rowSpan={1}
            >
              <FormattedMessage
                id="fragments.client_application.webhook"
                values={Object {}}
              />
            </th>
            <td
              className="mgi-items"
            >
              <code
                className="mgi-items--grow"
              >
                https://mati-callbacks-demo.firebaseio.com/webhooks.json
              </code>
              <Button
                buttonStyle="invisible"
                onClick={[Function]}
              >
                <trashbin.svg
                  className="svg-error"
                />
              </Button>
            </td>
            <CopyToClipboardCell
              text="https://mati-callbacks-demo.firebaseio.com/webhooks.json"
            />
          </tr>
        </tbody>
      </table>
    </Sections>
  </PanelBody>
</Panel>
`;
